[package]
name = "mineland-forsaken"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14", features = ["dynamic_linking"] }
# for 3D physics
bevy_rapier3d = { version = "0.27" }
# for async operations
tokio = { version = "1.0", features = ["full"] }
# for serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
# for random numbers
fastrand = "2.0"

# Asset compression
bevy_asset_loader = "0.20"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[[bin]]
name = "mineland-forsaken"
path = "src/main.rs"

[[bin]]
name = "network-test"
path = "src/main_test.rs"